view model & fix report

--- a/CapstoneProject/app/src/main/res/layout/activity_main.xml
+++ b/CapstoneProject/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:menu="@menu/bottom_nav"
+        app:elevation="2dp"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
