--- a/CapstoneProject/app/src/main/res/layout/fragment_home.xml
+++ b/CapstoneProject/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,9 @@
         android:id="@+id/imgProfile"
         android:layout_width="58dp"
         android:layout_height="58dp"
-        android:layout_margin="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginTop="32dp"
         android:src="@drawable/pppalogo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -175,11 +177,22 @@
             android:id="@+id/rvNews"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingStart="18dp"
-            android:paddingEnd="18dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintTop_toBottomOf="@id/tvNewsMenu"
             tools:listitem="@layout/news_item" />
+
+        <com.facebook.shimmer.ShimmerFrameLayout
+            android:id="@+id/shimmerLayout"
+            android:layout_width="match_parent"
+            android:paddingStart="18dp"
+            android:paddingEnd="18dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/tvNewsMenu">
+            <include
+                layout="@layout/news_placeholder"/>
+        </com.facebook.shimmer.ShimmerFrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
