--- a/CapstoneProject/app/src/main/res/layout/news_list_item.xml
+++ b/CapstoneProject/app/src/main/res/layout/news_list_item.xml
@@ -5,18 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="2dp"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="0dp"
     app:cardUseCompatPadding="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_margin="12dp"
         android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/imgNewsItem"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="78dp"
+            android:layout_height="78dp"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -28,6 +29,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:maxLines="2"
             android:fontFamily="@font/poppins_medium"
             android:textColor="@color/mainFontColor"
             app:layout_constraintEnd_toEndOf="parent"
@@ -40,26 +42,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:fontFamily="@font/poppins"
-            android:textColor="@color/mainFontColor"
+            android:textSize="12sp"
+            android:fontFamily="@font/poppins_medium"
+            android:textColor="#2C6D6A"
             app:layout_constraintStart_toStartOf="@id/tvNewsTitle"
             app:layout_constraintTop_toBottomOf="@id/tvNewsTitle"
             tools:text="18 Mei 2021" />
-
 
         <TextView
             android:id="@+id/tvNewsDesc"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:ellipsize="end"
-            android:fontFamily="@font/poppins"
             android:maxLines="3"
-            android:textColor="@color/mainFontColor"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@id/tvNewsTitle"
-            app:layout_constraintTop_toBottomOf="@+id/tvNewsDate"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgNewsItem"
             tools:text="News desc" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
