--- a/CapstoneProject/app/src/main/res/menu/bottom_nav.xml
+++ b/CapstoneProject/app/src/main/res/menu/bottom_nav.xml
@@ -2,22 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/home_nav"
-        android:icon="@drawable/ic_baseline_home_24"
+        android:icon="@drawable/ic_home_selector"
         android:title="Home" />
     <item
         android:id="@+id/news_nav"
-        android:icon="@drawable/ic_baseline_article_24"
+        android:icon="@drawable/ic_document_selector"
         android:title="News" />
     <item
         android:id="@+id/report_nav"
-        android:icon="@drawable/ic_baseline_add_24"
+        android:icon="@drawable/ic_plus"
         android:title="Report" />
     <item
         android:id="@+id/faq_nav"
-        android:icon="@drawable/ic_baseline_favorite_24"
+        android:icon="@drawable/ic_faq_selector"
         android:title="FAQ" />
     <item
         android:id="@+id/profile_nav"
-        android:icon="@drawable/ic_baseline_person_24"
+        android:icon="@drawable/ic_profile_selector"
         android:title="Profile" />
 </menu>
